--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:VP_Beadando"
         mc:Ignorable="d"
         Title="Oltás regiszter" Height="600" Width="800" Background="Ivory">
-
+    
+    <!--FŐ RÁCS-->
     <Grid Margin="10px" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -26,8 +27,8 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button  Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Name="btFelvesz" Width="100" Height="30" Margin="5">Felvesz</Button>
-            <Button Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Name="btKivalaszt" Width="100" Height="30" >Kiválaszt</Button>
+            <Button Click="btFelveszPaciens_Click"  Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Name="btFelveszPaciens" Width="100" Height="30" Margin="5">Felvesz</Button>
+            <Button Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Name="btKivalasztPaciens" Width="100" Height="30" >Kiválaszt</Button>
         </Grid>
 
         <!--Vakcina adatok gombjai-->
@@ -36,7 +37,7 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button  Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Name="btHozzaadVakcina" Width="100" Height="30" Margin="5">Hozzáad</Button>
+            <Button Click="btHozzaadVakcina_Click"  Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Name="btHozzaadVakcina" Width="100" Height="30" Margin="5">Hozzáad</Button>
             <Button Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Name="btKivalasztVakcina" Width="100" Height="30" >Kiválaszt</Button>
         </Grid>
 
@@ -47,7 +48,7 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button  Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Name="btHozzaadOrvos" Width="100" Height="30" Margin="5">Hozzáad</Button>
+            <Button Click="btHozzaadOrvos_Click" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Name="btHozzaadOrvos" Width="100" Height="30" Margin="5">Hozzáad</Button>
             <Button Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Name="btKivalasztOrvos" Width="100" Height="30" >Kiválaszt</Button>
         </Grid>
         
@@ -76,13 +77,15 @@
             <Label Content="Taj:" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Center"/>
             <Label Content="Település:" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Center"/>
             <Label Content="Cím:" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center"/>
+            
+            <!--BETEGADATOK BEVITEL-->
             <TextBox x:Name="tbName" Grid.Column="1" HorizontalAlignment="Stretch" Grid.Row="1"  TextWrapping="Wrap" VerticalAlignment="Center" Margin="10"/>
             <TextBox x:Name="tbTaj" Grid.Column="1" HorizontalAlignment="Stretch"  Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center" Margin="10"/>
             <TextBox x:Name="tbCim" Grid.Column="1" HorizontalAlignment="Stretch"  Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Margin="10"/>
-            <ComboBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="3" VerticalAlignment="Center"/>
+            <ComboBox Name="cbPacienszip" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="3" VerticalAlignment="Center"/>
             <Label Content="Páciens adatok:" Margin="5" VerticalAlignment="Top" FontWeight="Bold" Grid.ColumnSpan="2"/>
 
-            <ListView Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="5">
+            <ListView Name="lvPList" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="5">
                 <!--páciens lista-->
                 <ListView.View>
                     <GridView>
@@ -107,11 +110,13 @@
             <Label Content="Vakcina adatok:" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Center" FontWeight="Bold" Grid.ColumnSpan="2"/>
             <Label Content="Oltóanyag neve:" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Center"/>
             <Label Content="Sorozatszáma" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="1"  TextWrapping="Wrap" VerticalAlignment="Top"/>
-            <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="2"  TextWrapping="Wrap" VerticalAlignment="Top"/>
+           
+            <!--VAKCINA BEVITELI-->
+            <TextBox Name="tbVaccineName" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="1"  TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <TextBox Name="tbSerial" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="2"  TextWrapping="Wrap" VerticalAlignment="Top"/>
 
             <!-- VAKCINA LIST VIEW-->
-            <ListView Margin="5" Grid.Row="3" SelectionChanged="ListView_SelectionChanged" Grid.ColumnSpan="2">
+            <ListView Name="lvVlist" Margin="5" Grid.Row="3"  Grid.ColumnSpan="2">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn/>
@@ -140,11 +145,13 @@
             <Label Content="Ellátó orvos adatai:" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Center" FontWeight="Bold" Grid.ColumnSpan="2"/>
             <Label Content="Pecsétszám:" HorizontalAlignment="Left" Margin="5" Grid.Row="1" VerticalAlignment="Center"/>
             <Label Content="Orvos neve:" HorizontalAlignment="Left" Margin="5" Grid.Row="2" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="5" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="5" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center"/>
+            
+            <!--ORVOS BEVITEL-->
+            <TextBox Name="tbPecset" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center"/>
+            <TextBox Name="tbDrName" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center"/>
 
             <!--ORVOS LISTA-->
-            <ListView Grid.Row="3" Margin="5" Grid.ColumnSpan="2">
+            <ListView Name="lvDlist" Grid.Row="3" Margin="5" Grid.ColumnSpan="2">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn/>
@@ -177,13 +184,14 @@
             <Label Content="Kórház:" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Center" Margin="5"/>
             <Label Content="Város:" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Center" Margin="5"/>
             
-            
-            <ComboBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" Margin="10" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="2" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="3" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Center"/>
+            <!--KORHAZ ADATOK-->
+            <ComboBox Name="cbKorhazdata" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" Margin="10" VerticalAlignment="Center"/>
+            <TextBox Name="tbKorhazname" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="2" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Center"/>
+            <TextBox Name="tbKorhazcim" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10" Grid.Row="3" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Center"/>
         </Grid>
 
-
+        
+       <!--ÖSSZESÍTETT LISTA-->
         <Grid Grid.Column="1" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="5*"/>
@@ -198,7 +206,7 @@
 
             </Grid.ColumnDefinitions>
             
-            <ListView Grid.ColumnSpan="4" Margin="10">
+            <ListView Name="lvSum" Grid.ColumnSpan="4" Margin="10">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn/>
@@ -206,8 +214,8 @@
                 </ListView.View>
             </ListView>
 
-            <Button Padding="10,0,10,0" Grid.Column="2" HorizontalAlignment="Right" Margin="10,0,10,0" Grid.Row="1" VerticalAlignment="Top" FontWeight="Bold">Hozzáad</Button>
-            <Button Padding="10,0,10,0" Grid.Column="3" HorizontalAlignment="Left" Margin="10,0,10,0" Grid.Row="1" VerticalAlignment="Top" FontWeight="Bold">Töröl</Button>
+            <Button Name="btHozzaadOltottak" Padding="10,0,10,0" Grid.Column="2" HorizontalAlignment="Right" Margin="10,0,10,0" Grid.Row="1" VerticalAlignment="Top" FontWeight="Bold">Hozzáad</Button>
+            <Button Name="btTorolOltottak" Padding="10,0,10,0" Grid.Column="3" HorizontalAlignment="Left" Margin="10,0,10,0" Grid.Row="1" VerticalAlignment="Top" FontWeight="Bold">Töröl</Button>
         </Grid>
 
 
